Update demo intro for custom input

--- a/demo/text-field-custom-demos.html
+++ b/demo/text-field-custom-demos.html
@@ -8,7 +8,9 @@
 
     <h3>Custom Input</h3>
     <p>
-      `vaadin-text-field` has major part of the properties and attributes available on the native input.
+      A native <code>&lt;input&gt;</code> element can optionally be defined separately as a child element for the
+      <code>&lt;vaadin-text-field&gt;</code>. This will enable use-cases where having the <code>&lt;input&gt;</code>
+      element available in the global DOM is necessary, such as supporting password managers or native forms.
     </p>
     <p>
       <b>Note:</b> All properties and attributes that `vaadin-text-field` has should be defined on the host.
