Align Lumo imports for password-field and text-area

--- a/theme/lumo/vaadin-text-area-styles.html
+++ b/theme/lumo/vaadin-text-area-styles.html
@@ -1,6 +1,7 @@
 <link rel="import" href="../../../vaadin-lumo-styles/color.html">
 <link rel="import" href="../../../vaadin-lumo-styles/sizing.html">
 <link rel="import" href="../../../vaadin-lumo-styles/typography.html">
+<link rel="import" href="vaadin-text-field-styles.html">
 
 <dom-module id="lumo-text-area" theme-for="vaadin-text-area">
   <template>
