--- a/theme/lumo/vaadin-password-field-styles.html
+++ b/theme/lumo/vaadin-password-field-styles.html
@@ -1,5 +1,6 @@
 <link rel="import" href="../../../vaadin-lumo-styles/font-icons.html">
 <link rel="import" href="../../../vaadin-lumo-styles/sizing.html">
+<link rel="import" href="vaadin-text-field-styles.html">
 
 <dom-module id="lumo-password-field" theme-for="vaadin-password-field">
   <template>
