--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -23,6 +23,14 @@ This program is available under Apache License Version 2.0, available at https:/
         content: "+";
       }
 
+      [part="decrease-button"],
+      [part="increase-button"] {
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
       /* Hide the native arrow icons */
       [part="value"]::-webkit-outer-spin-button,
       [part="value"]::-webkit-inner-spin-button {
@@ -31,7 +39,7 @@ This program is available under Apache License Version 2.0, available at https:/
       }
 
       [part="value"] {
-        -moz-appearance: textfield;
+        -moz-appearance: textfield !important;
       }
     </style>
 
@@ -114,6 +122,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
         ready() {
           super.ready();
+          this.__previousValidInput = this.value || '';
           this.focusElement.type = 'number';
           this.focusElement.addEventListener('change', this.__onInputChange.bind(this));
         }
@@ -151,9 +160,9 @@ This program is available under Apache License Version 2.0, available at https:/
         __add(sign) {
           const incr = sign * (this.step || 1);
           // Behave like native number input adjusting to the next exact multiple of step.
-          this.value = (incr + (incr * Math.floor((parseFloat(this.value || 0) / incr).toFixed(1)))).toFixed(this.__decimals);
+          this.value = this.focusElement.value =
+            (incr + (incr * Math.floor((parseFloat(this.value || 0) / incr).toFixed(1)))).toFixed(this.__decimals);
           this.dispatchEvent(new CustomEvent('change', {bubbles: true}));
-          this.focusElement.focus();
         }
 
         _allowed(sign, value, min, max) {
@@ -172,9 +181,11 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _valueChanged(newVal, oldVal) {
-          // native input does not accept certain values, and also converts
-          // from number to string, so we need synchronize value
-          this.value = this.focusElement.value;
+          if (!isNaN(newVal) && !isNaN(parseFloat(newVal).toFixed(this.__decimals))) {
+            this.value = parseFloat(newVal).toFixed(this.__decimals).toString();
+          } else {
+            this.value = this.focusElement.value = '';
+          }
           super._valueChanged(this.value, oldVal);
         }
 
@@ -200,6 +211,28 @@ This program is available under Apache License Version 2.0, available at https:/
             this.invalid = !this.focusElement.checkValidity();
           }
           return super.checkValidity();
+        }
+
+        _onInput(e) {
+          const input = this.focusElement;
+          if (e.data === '-' && (this.__previousValidInput === '-' || !this.__previousValidInput)) {
+            // Allow minus sign (-) as the first character
+            this.__previousValidInput = '-';
+          } else if (input.validity && input.validity.badInput) {
+            // Browser deems input value as invalid
+            if (this.__previousValidInput.length === 2 && this.__previousValidInput.substring(0, 1) === '-') {
+              // Special case when pressing backspace for example -5 value
+              this.__previousValidInput = '-';
+            } else {
+              // Don't allow inserted value
+              input.value = this.__previousValidInput;
+            }
+          } else {
+            // Allow inserted value
+            this.__previousValidInput = e.target.value;
+          }
+
+          super._onInput(e);
         }
       }
 
