Add name to the email field demo

--- a/demo/email-field-demos.html
+++ b/demo/email-field-demos.html
@@ -11,7 +11,7 @@
     <h3>Email Field</h3>
     <vaadin-demo-snippet id="email-field-demos-basic-email-field">
       <template preserve-content>
-        <vaadin-email-field label="Email" error-message="Please enter a valid email address"></vaadin-email-field>
+        <vaadin-email-field label="Email" name="email" error-message="Please enter a valid email address" clear-button-visible></vaadin-email-field>
       </template>
     </vaadin-demo-snippet>
 
