Add visualisation when invalid input is prevented, for #84
Implementation temporarily (200ms, debounced) toggles a
"input-prevented" attribute. The default style colors the value (and
caret) red (using error color in Lumo/Material).
Text color was chosen, because the field might be "invalid", in which
case the regular "invalid" style would not be seen. The drawback is that
only the caret is colored if the field is empty.

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -307,6 +307,13 @@ This program is available under Apache License Version 2.0, available at https:/
         const input = this.focusElement;
         if (input.value.length > 0 && !this.checkValidity()) {
           input.value = this.value || '';
+          // add input-prevented attribute for 200ms
+          this.setAttribute('input-prevented', '');
+          this._inputDebouncer = Polymer.Debouncer.debounce(
+            this._inputDebouncer,
+            Polymer.Async.timeOut.after(200), () => {
+              this.removeAttribute('input-prevented');
+            });
           return;
         }
       }
