--- a/test/text-field.html
+++ b/test/text-field.html
@@ -216,6 +216,24 @@
             });
           });
         }
+
+        describe(`autoselect ${condition}`, function() {
+          it('default value of autoselect should be false', function() {
+            expect(textField.autoselect).to.be.false;
+          });
+          it('should not select content on focus when autoselect is false', function() {
+            textField.value = '123';
+            textField.focus();
+            expect(textField.focusElement.selectionEnd - textField.focusElement.selectionStart).to.equal(0);
+          });
+          it('should select content on focus when autoselect is true', function() {
+            textField.value = '123';
+            textField.autoselect = true;
+            textField.focus();
+            expect(textField.focusElement.selectionEnd - textField.focusElement.selectionStart).to.equal(3);
+          });
+        });
+
       });
 
       describe(`events ${condition}`, function() {
