Make focus() work on headless for tests.

--- a/test/text-field.html
+++ b/test/text-field.html
@@ -223,13 +223,13 @@
           });
           it('should not select content on focus when autoselect is false', function() {
             textField.value = '123';
-            textField.focus();
+            textField.focusElement.dispatchEvent(new CustomEvent('focus', {bubbles: false}));
             expect(textField.focusElement.selectionEnd - textField.focusElement.selectionStart).to.equal(0);
           });
           it('should select content on focus when autoselect is true', function() {
             textField.value = '123';
             textField.autoselect = true;
-            textField.focus();
+            textField.focusElement.dispatchEvent(new CustomEvent('focus', {bubbles: false}));
             expect(textField.focusElement.selectionEnd - textField.focusElement.selectionStart).to.equal(3);
           });
         });
