Rename autoselect methods, add/remove along w/ other listeners, reformat.

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -398,12 +398,10 @@ This program is available under Apache License Version 2.0, available at https:/
       if (slotted && !this._slottedInput) {
         this._validateSlottedValue(slotted);
         this._addInputListeners(slotted);
-        this._addAutoselectListener(slotted);
         this._addIEListeners(slotted);
         this._slottedInput = slotted;
       } else if (!this._slottedInput) {
         this._removeInputListeners(this._slottedInput);
-        this._removeAutoselectListener(this._slottedInput);
         this._removeIEListeners(this._slottedInput);
         this._slottedInput = undefined;
       }
@@ -473,20 +471,14 @@ This program is available under Apache License Version 2.0, available at https:/
       node.addEventListener('input', this._boundOnInput);
       node.addEventListener('change', this._boundOnChange);
       node.addEventListener('blur', this._boundOnBlur);
+      node.addEventListener('focus', this._boundOnFocus);
     }
 
     _removeInputListeners(node) {
       node.removeEventListener('input', this._boundOnInput);
       node.removeEventListener('change', this._boundOnChange);
       node.removeEventListener('blur', this._boundOnBlur);
-    }
-
-    _addAutoselectListener(node) {
-      node.addEventListener('focus', this._boundAutoselect);
-    }
-
-    _removeAutoselectListener(node) {
-      node.removeEventListener('focus', this._boundAutoselect);
+      node.removeEventListener('focus', this._boundOnFocus);
     }
 
     ready() {
@@ -495,17 +487,15 @@ This program is available under Apache License Version 2.0, available at https:/
       this._boundOnInput = this._onInput.bind(this);
       this._boundOnChange = this._onChange.bind(this);
       this._boundOnBlur = this.validate.bind(this);
-      this._boundAutoselect = this._autoselect.bind(this);
+      this._boundOnFocus = this._onFocus.bind(this);
 
       const defaultInput = this.shadowRoot.querySelector('[part="value"]');
       this._slottedInput = this.querySelector(`${this._slottedTagName}[slot="${this._slottedTagName}"]`);
       this._addInputListeners(defaultInput);
-      this._addAutoselectListener(defaultInput);
       this._addIEListeners(defaultInput);
       if (this._slottedInput) {
         this._addIEListeners(this._slottedInput);
         this._addInputListeners(this._slottedInput);
-        this._addAutoselectListener(this._slottedInput);
       }
 
       this.shadowRoot.querySelector('[name="input"], [name="textarea"]')
@@ -538,7 +528,7 @@ This program is available under Apache License Version 2.0, available at https:/
       this.value = '';
     }
 
-    _autoselect() {
+    _onFocus() {
       if (this.autoselect) {
         this.focusElement.select();
       }
