Add imports to mixin, use error _text_ color.

--- a/theme/lumo/vaadin-text-field-styles.html
+++ b/theme/lumo/vaadin-text-field-styles.html
@@ -218,7 +218,7 @@
       }
 
       :host([input-prevented]) [part="input-field"] {
-        color: var(--lumo-error-color);
+        color: var(--lumo-error-text-color);
       }
 
       /* Small theme */
