--- a/theme/material/vaadin-text-field-styles.html
+++ b/theme/material/vaadin-text-field-styles.html
@@ -187,7 +187,7 @@
       }
 
       :host([input-prevented]) [part="input-field"] {
-        color: var(--material-error-color);
+        color: var(--material-error-text-color);
       }
 
       :host([disabled]) {
