--- a/test/number-field.html
+++ b/test/number-field.html
@@ -145,7 +145,7 @@
 
           increaseButton.click();
 
-          expect(numberField.value).to.be.equal('0');
+          expect(numberField.value).to.be.equal(0);
         });
 
         it('should not decrease value when decreaseButton is clicked and min value is reached', () => {
@@ -154,7 +154,7 @@
 
           decreaseButton.click();
 
-          expect(numberField.value).to.be.equal('0');
+          expect(numberField.value).to.be.equal(0);
         });
 
         it('should not disable buttons if there are no limits set', () => {
@@ -181,10 +181,10 @@
           numberField.value = 0;
 
           increaseButton.click();
-          expect(numberField.value).to.be.equal('0');
+          expect(numberField.value).to.be.equal(0);
 
           decreaseButton.click();
-          expect(numberField.value).to.be.equal('0');
+          expect(numberField.value).to.be.equal(0);
         });
 
         it('should prevent touchend event on value control buttons', () => {
@@ -214,6 +214,17 @@
           numberField.value = 'foo';
           expect(numberField.value).to.be.empty;
           expect(numberField.validate()).to.be.true;
+        });
+
+        it('should prevent setting decimals', () => {
+          numberField.value = 7.6;
+          expect(numberField.value).to.be.equal(8);
+        });
+
+        it('should prevent setting too many decimals', () => {
+          numberField.step = 0.1;
+          numberField.value = 7.686;
+          expect(numberField.value).to.be.equal(7.7);
         });
 
         it('should validate when setting limits', () => {
