--- a/test/visual/vaadin-text-area/text-area-2.html
+++ b/test/visual/vaadin-text-area/text-area-2.html
@@ -40,6 +40,8 @@
       invalid: <vaadin-text-area required invalid></vaadin-text-area>
       <p>
       label: <vaadin-text-area label="Foo"></vaadin-text-area>
+      <p>
+      label and value: <vaadin-text-area label="Foo" value="Bar"></vaadin-text-area>
     </fieldset>
   </form>
 
