--- a/theme/material/vaadin-text-area-styles.html
+++ b/theme/material/vaadin-text-area-styles.html
@@ -4,6 +4,7 @@
   <template>
     <style include="material-text-field">
       [part="input-field"] {
+        position: initial;
         height: auto;
         box-sizing: border-box;
       }
