Remove preventInput flag on requestAnimationFrame

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -326,7 +326,6 @@ This program is available under Apache License Version 2.0, available at https:/
     _onInput(e) {
       if (this.__preventInput) {
         e.stopImmediatePropagation();
-        this.__preventInput = false;
         return;
       }
 
@@ -589,7 +588,12 @@ This program is available under Apache License Version 2.0, available at https:/
         // - focus or blur, when placeholder attribute is set
         // - placeholder attribute value changed
         // https://developer.microsoft.com/en-us/microsoft-edge/platform/issues/101220/
-        this._shouldPreventInput = () => this.__preventInput = true;
+        this._shouldPreventInput = () => {
+          this.__preventInput = true;
+          requestAnimationFrame(() => {
+            this.__preventInput = false;
+          });
+        };
         node.addEventListener('focusin', this._shouldPreventInput);
         node.addEventListener('focusout', this._shouldPreventInput);
         this._createPropertyObserver('placeholder', this._shouldPreventInput);
