Replace timeout with raf in the test

--- a/test/text-field.html
+++ b/test/text-field.html
@@ -353,7 +353,7 @@
 
           textField.dispatchEvent(new Event('focusin'));
 
-          setTimeout(() => {
+          requestAnimationFrame(() => {
             input.value = 'a';
             const inputEvent = new Event('input');
             input.dispatchEvent(inputEvent);
