Fix text-area scroll with fixed height in material theme

--- a/src/vaadin-text-field-mixin.html
+++ b/src/vaadin-text-field-mixin.html
@@ -189,7 +189,8 @@ This program is available under Apache License Version 2.0, available at https:/
          */
         errorMessage: {
           type: String,
-          value: ''
+          value: '',
+          reflectToAttribute: true
         },
 
         /**
