--- a/test/text-field.html
+++ b/test/text-field.html
@@ -119,8 +119,12 @@
           }
 
           function assertPropCanBeSet(prop, value) {
-            textField[prop] = value;
-            expect(input[prop]).to.be.equal(value);
+            for (let i = 0; i < 3; i ++) {
+              // Check different values
+              const newValue = typeof value === 'boolean' ? i % 2 === 0 : value + i;
+              textField[prop] = newValue;
+              expect(input[prop]).to.be.equal(newValue);
+            }
           }
 
           ['pattern', 'placeholder', 'value', 'title'].forEach(function(prop) {
