--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -208,7 +208,18 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _getValue(incr) {
-          return (incr + (incr * Math.floor((parseFloat(this.value || 0) / incr).toFixed(1)))).toFixed(this.__decimals);
+          let result = this.min || incr;
+          if (this.value) {
+            const number = parseFloat(this.value);
+            let nextMultiple = parseFloat((Math.ceil(number / incr) * incr).toFixed(this.__decimals));
+            if (this.min) {
+              let minOffset = this.min % this.step;
+              minOffset = incr < 0 ? -minOffset : minOffset;
+              nextMultiple = this.min ? nextMultiple + minOffset : nextMultiple;
+            }
+            result = (nextMultiple === number ? nextMultiple + incr : nextMultiple).toFixed(this.__decimals);
+          }
+          return result;
         }
 
         _getAllowedIncrementSign(sign) {
@@ -262,17 +273,19 @@ This program is available under Apache License Version 2.0, available at https:/
           // Validate value to be numeric
           if (newVal && isNaN(parseFloat(newVal).toFixed(this.__decimals))) {
             this.value = '';
-          } else if (!isNaN(parseFloat(this.value)) &&
+          } else if (!isNaN(parseFloat(this.value)) && this.__decimals &&
             parseFloat(this.value) !== parseFloat(parseFloat(this.value).toFixed(this.__decimals))) {
             // Validate correct decimals
-            this.value = parseFloat(parseFloat(this.value).toFixed(this.__decimals));
+            this.value = parseFloat(this.value).toFixed(this.__decimals);
+          } else if (typeof this.value !== 'string') {
+            this.value = String(this.value);
           }
 
           super._valueChanged(this.value, oldVal);
         }
 
         __onInputChange() {
-          this.checkValidity() && this.__adjustDecimals();
+          this.checkValidity();
         }
 
         __adjustDecimals() {
@@ -289,8 +302,9 @@ This program is available under Apache License Version 2.0, available at https:/
 
         checkValidity() {
           // text-field mixin does not check against `min` and `max`
-          if (this.min !== undefined || this.max !== undefined) {
-            this.invalid = !this.inputElement.checkValidity();
+          if (this.value && (this.min !== undefined || this.max !== undefined || this.step)) {
+            const stepBase = this.min || 0;
+            this.invalid = this.value < this.min || this.value > this.max || (this.value - stepBase).toFixed(this.__decimals) % this.step !== 0;
           }
           return super.checkValidity();
         }
