--- a/test/number-field.html
+++ b/test/number-field.html
@@ -267,6 +267,14 @@
 
           expect(numberField.value).to.be.equal(String(numberField.min));
         });
+
+        it('should increase value to min value when value is not set and increaseButton is clicked', () => {
+          numberField.min = -10;
+
+          increaseButton.click();
+
+          expect(numberField.value).to.be.equal(String(numberField.min));
+        });
       });
 
       describe('input validation', () => {
@@ -289,10 +297,22 @@
           expect(numberField.value).to.be.equal('7.6');
         });
 
-        it('should prevent setting too many decimals', () => {
+        it('should not prevent invalid values applied programatically (step)', () => {
           numberField.step = 0.1;
           numberField.value = 7.686;
-          expect(numberField.value).to.be.equal('7.7');
+          expect(numberField.value).to.be.equal('7.686');
+        });
+
+        it('should not prevent invalid values applied programatically (min)', () => {
+          numberField.min = 2;
+          numberField.value = 1;
+          expect(numberField.value).to.be.equal('1');
+        });
+
+        it('should not prevent invalid values applied programatically (max)', () => {
+          numberField.max = 2;
+          numberField.value = 3;
+          expect(numberField.value).to.be.equal('3');
         });
 
         it('should validate when setting limits', () => {
