--- a/src/vaadin-number-field.html
+++ b/src/vaadin-number-field.html
@@ -273,10 +273,6 @@ This program is available under Apache License Version 2.0, available at https:/
           // Validate value to be numeric
           if (newVal && isNaN(parseFloat(newVal).toFixed(this.__decimals))) {
             this.value = '';
-          } else if (!isNaN(parseFloat(this.value)) && this.__decimals &&
-            parseFloat(this.value) !== parseFloat(parseFloat(this.value).toFixed(this.__decimals))) {
-            // Validate correct decimals
-            this.value = parseFloat(this.value).toFixed(this.__decimals);
           } else if (typeof this.value !== 'string') {
             this.value = String(this.value);
           }
@@ -302,9 +298,8 @@ This program is available under Apache License Version 2.0, available at https:/
 
         checkValidity() {
           // text-field mixin does not check against `min` and `max`
-          if (this.value && (this.min !== undefined || this.max !== undefined || this.step)) {
-            const stepBase = this.min || 0;
-            this.invalid = this.value < this.min || this.value > this.max || (this.value - stepBase).toFixed(this.__decimals) % this.step !== 0;
+          if (this.min !== undefined || this.max !== undefined || this.step) {
+            this.invalid = !this.inputElement.checkValidity();
           }
           return super.checkValidity();
         }
